# flibhpc

./: CMakeLists.txt  README.md
cmake/: FlibcppConfig.cmake.in  flibcpp_version.cpp.in
doc/: conf.py  conventions.rst  examples.rst  index.rst  introduction.rst  module.rst
doc/appendices/: interface.rst
include/: flhpc.i  import_flhpc.i  mpi.i  openacc.i  thrust.i
test/: CMakeLists.txt  test_flhpc.F90
